--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <nav>
+        <h1>CSS Day3</h1>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/About.html">About</a></li>
+            <li><a href="/Contact Me.html">Contact Me</a></li>
+        </ul>
+    </nav>
     <!-- <main class="">
         <div class="div-1">
 
